# ping-me-up

./: .gitignore  Cargo.toml  Makefile  build.sh  config.example.toml  monitor-me.sh  pinger.sh  readme.md  test.sh
.github/workflows/: ci.yml  release.yml
crypto-notify/: Dockerfile  bot.py  docker-compose.yaml  requirements.txt
legacy/: README.md
src/: config.rs  main.rs  monitor.rs  procfs.rs  telegram.rs
systemd/: pingmeup-monitor.service  pingmeup-monitor.timer
