[package]
name = "pingmeup"
version = "0.1.0"
edition = "2021"
description = "Fast TCP host pinger and resource monitor with Telegram notifications"
license = "MIT"

[[bin]]
name = "pingmeup"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
ureq = { version = "2.10", default-features = false, features = ["tls"] }
walkdir = "2"
libc = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = false
